--- a/Final_SF_Map_Code.ipynb
+++ b/Final_SF_Map_Code.ipynb
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "phiWezPIXgwY",
         "colab_type": "code",
-        "outputId": "6fee9ce8-17ca-4ce2-a4d5-1127f7a80f4a",
+        "outputId": "957e9d7c-8b93-41f4-c548-3380fd8bb6c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
@@ -149,7 +149,7 @@
         "print(temp_data.shape)\n",
         "temp_data.head(5)"
       ],
-      "execution_count": 76,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,38 +450,16 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 99
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dJAMDCQsYeVl",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# # Fill house square foot zero values with the average house square footage by bedroom for all single family homes in SF\n",
-        "# averagesf_data = temp_data.groupby('beds').sf.mean()\n",
-        "\n",
-        "# # Use average sf by bedroom for each 0 value in each bedroom group up to 9 bedrooms\n",
-        "# for i in range(0, 9): \n",
-        "#   temp_data.loc[(temp_data['sf'] == 0) & (temp_data['beds'] == i), 'sf'] = averagesf_data.loc[i]\n",
-        "\n",
-        "# # Use 10,000sf for anything over 9 bedrooms\n",
-        "# temp_data.loc[temp_data['sf'] == 0, 'sf'] = 10000\n",
-        "# temp_data = temp_data.astype({'sf': int})"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "uDo1TAshZuj-",
         "colab_type": "code",
-        "outputId": "f6fc52d4-ba1d-459f-ef88-6a4502c0ee5d",
+        "outputId": "47a199a3-e7e7-4722-8d2a-3109d3a1483b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
@@ -506,7 +484,7 @@
         "results_data = results_data.replace({'subdist_no': neighborhood_dict})\n",
         "results_data.head()"
       ],
-      "execution_count": 78,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +598,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 100
         }
       ]
     },
@@ -629,7 +607,7 @@
       "metadata": {
         "id": "95329Bbiac-B",
         "colab_type": "code",
-        "outputId": "ee08ad0d-d576-4e3b-fe46-d1154e1f7fed",
+        "outputId": "a32fc22e-b73e-41c8-a6cd-71da82eb5980",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 445
@@ -645,7 +623,7 @@
         "sf_data['price_sf'] = sf_data['sale_price'] / sf_data['sf']\n",
         "sf_data.head(5)"
       ],
-      "execution_count": 79,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +929,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 101
         }
       ]
     },
@@ -964,7 +942,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 445
         },
-        "outputId": "f9bd8443-047b-451b-ee68-b0ec32e224e7"
+        "outputId": "6db0b332-d3ef-4b5c-886a-63d0bbe030bc"
       },
       "source": [
         "high_cutoff = 2018\n",
@@ -972,7 +950,7 @@
         "print(sf_data.shape)\n",
         "sf_data.head()"
       ],
-      "execution_count": 80,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -1285,7 +1263,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 102
         }
       ]
     },
@@ -1304,7 +1282,7 @@
       "metadata": {
         "id": "udbf0vBgz-P6",
         "colab_type": "code",
-        "outputId": "1b881a09-82df-405e-c21f-b4a2eb4501b6",
+        "outputId": "e683a18c-2238-44df-9391-3d759ccc4a5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1363,7 +1341,7 @@
         "\n",
         "neighborhood_data.head()"
       ],
-      "execution_count": 81,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1471,7 +1449,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 103
         }
       ]
     },
@@ -1490,7 +1468,7 @@
       "metadata": {
         "id": "0E4eFxilb0N3",
         "colab_type": "code",
-        "outputId": "10918e2a-c05b-46fc-c2a5-7af7b8b6a6cf",
+        "outputId": "d72e3882-6c84-4f58-df58-d1da22f7e96a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1516,7 +1494,7 @@
         "sf.sort_values(by=['subdist_no'])\n",
         "sf.head()"
       ],
-      "execution_count": 82,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1600,7 +1578,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 104
         }
       ]
     },
@@ -1619,7 +1597,7 @@
       "metadata": {
         "id": "oDyuHAL19y5W",
         "colab_type": "code",
-        "outputId": "9c63609d-92a1-4252-ef70-68a62f49db96",
+        "outputId": "2acd0ac4-2d09-4c34-cedf-8c1ecb7869e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
@@ -1639,7 +1617,7 @@
         "format_df = pd.DataFrame(format_data, columns = ['field' , 'min_range', 'max_range' , 'format', 'verbage'])\n",
         "format_df.head(10)"
       ],
-      "execution_count": 83,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1738,7 +1716,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 105
         }
       ]
     },
@@ -1846,6 +1824,12 @@
         "        columns = [TableColumn(field = 'full_address', title = 'Address')]\n",
         "  \n",
         "        data_table = DataTable(source = source, view = view1, columns = columns, width = 280, height = 280, editable = False)\n",
+        "        table_address.value = ''\n",
+        "        table_actual.value = ''\n",
+        "        table_predicted.value = ''\n",
+        "        table_diff.value = ''\n",
+        "        table_percent.value = ''\n",
+        "        table_shap.value = ''\n",
         "\n",
         "        # Replace the updated datatable in the layout\n",
         "        layout.children[1] = column(tap_neighborhood, data_table, table_address, table_actual, table_predicted,\n",
