--- a/Final_SF_Map_Code.ipynb
+++ b/Final_SF_Map_Code.ipynb
@@ -945,6 +945,7 @@
         "outputId": "6db0b332-d3ef-4b5c-886a-63d0bbe030bc"
       },
       "source": [
+        "# Use only 2018 data\n",
         "high_cutoff = 2018\n",
         "sf_data  = sf_data[sf_data['year'] >= high_cutoff]\n",
         "print(sf_data.shape)\n",
